tools/rust-parser/tests/fixtures/positive/groups-and-math.tree
\p{plain [square] (paren) #{x + y} ##{z} #topic @ '}
