tools/rust-parser/tests/fixtures/negative/header-binders-mixed.tree
\def\macro(x)[y]{body}
